--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
 
     <header class="flex-row-center">
         <div class="logo">
-            <img src="img/Lyon-logo.jpg" alt="Logo de la ville de Lyon">
+            <img src="https://www.lyon.fr/sites/lyonfr/files/content/2017-07/VDL-logo.jpg" alt="Logo de la ville de Lyon">
         </div>
     </header>
     <div class="container flex-row-center">
-        <div id="map" class="map"></div>
+        <div id="map"></div>
     </div>
     <footer class="flex-row-center">
         <div class="footer">
@@ -25,15 +25,9 @@
         </div>
     </footer>
 
-    <!-- <script src="js/vendor.js"></script> -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
-    <script src="js/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
-
-<!--  Requetes APi 
-    GET https://api.jcdecaux.com/vls/v1/stations?contract=Lyon&apiKey=2c6abae763f0a40668868e3e3fc3c696cb389565 
-    
--->
